# chatbot_template_streamlit

./: .env.example  .gitignore  README.md  app.py  claude.md  pyproject.toml
.streamlit/: config.toml
component/: __init__.py  chat_tab.py  education_tips.py  overview_tab.py  pdf_tab.py  prompts_tab.py  sidebar.py  styles.py
domain/: __init__.py  chunk.py  llm_output.py  message.py  session.py
evaluation/: config.py  datasets.py  evaluators.py  run_evaluation.py  runner.py
material/: README.md  _00_load_map.md  _02_markdown_style.md  note_01_api_call.ipynb  note_01_api_call.md  note_02_prompt_and_langsmith.md  note_04_token_and_cost.ipynb  note_04_token_and_cost.md  note_05_generation_params.ipynb  note_06_streaming.ipynb  note_06_streaming.md  note_09_tool_calling.ipynb  note_10_thinking.md  note_11_react_agent.md  note_13_rag.md  note_14_evaluation.ipynb  note_14_evaluation.md  question.md  style_guide.md
prompt/: __init__.py
repository/: __init__.py  conversation_repo.py  embedding_repo.py  pdf_extractor.py  session_repo.py
scripts/: debug_context_managing.py
service/: __init__.py  embedding_service.py  llm_service.py  prompt_loader.py  rag_service.py  react_graph.py  reasoning_detector.py  search_service.py  session_manager.py  summary_service.py  tool_manager.py  tools.py
tests/: test_auto_reasoning.py  test_casual_mode.py  test_component.py  test_context_managing.py  test_domain.py  test_integration.py  test_llm_output.py  test_overview_tab.py  test_phase_03_01.py  test_phase_03_02.py  test_phase_03_03.py  test_phase_03_04_integration.py  (+32 more)
(+90 files in other folders)
